# sports-analytics

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/api/: main.py  middleware.py  model_registry.py
backend/api/routes/: engagement.py  pipeline_routes.py  pr_strategy.py  sentiment.py
backend/config/: settings.py
backend/data/: data_loader.py  preprocessor.py
backend/models/: cross_sport_normalizer.py  database.py  engagement_model.py  rl_module.py  sentiment_model.py
backend/pipeline/: __init__.py  core.py  feature_engineering.py  ingestion.py  intervention.py  models.py  risk_assessment.py  streaming.py
backend/scripts/: download_datasets.py  train_models.py
backend/utils/: helpers.py
frontend/: index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Cards/: PRRecommendationCard.tsx
frontend/src/components/Charts/: EngagementHeatmap.tsx  SentimentTrendChart.tsx
frontend/src/components/Dashboard/: RiskMeter.tsx  SportSelector.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  EngagmentMetrics.tsx  PRStrategy.tsx  SentimentAnalysis.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
